# calqo

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  design-qa.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: PRD-calqo-v0.5.md  calqo-animation-extension-plan.md  calqo-browser-prototype-implementation-plan.md  calqo-five-key-features-implementation-plan.md  calqo-mcp-drawing-experience.md  calqo-mcp-experience-opus.md  calqo-mcp-live-drawing-implementation-plan.md  calqo-post-phase-m-implementation-plan.md  calqo-post-prototype-implementation-plan.md  calqo-project-maker.skill  calqo-tauri-agent-drawing-plan.md  export-fidelity.md  mcp-known-limitations.md  plan.md  security-performance-reliability-audit.md
docs/Old/: GeoCarto-design.md  calqo-five-key-features-implementation-plan.md  calqo-mcp-live-drawing-implementation-plan.md  calqo-post-phase-m-implementation-plan.md  calqo-post-prototype-implementation-plan.md
docs/animation/: AN-0.5-decision.md
docs/diagnose/: menu-test-story-reel-cover.html  menu-test-story-reel-coveredit.html  menu-test.calqo
e2e/: five-features-smoke.spec.ts  phase-n-smoke.spec.ts
icons/calqo_schematic_liquid_glass_macos/: Calqo-Schematic-LiquidGlass.icns
icons/calqo_v03_refined_larger/: Calqo-V03-Refined-Larger.icns
output/playwright/: after-editable.html
public/: manifest.webmanifest
public/starters/: CREDITS.md  app-launch.calqo  bilateral-visit.calqo  birthday-invite.calqo  blog-header.calqo  book-release.calqo  cafe-menu.calqo  campaign-kit.calqo  community-countdown.calqo  consular-notice.calqo  cultural-exchange.calqo  data-brief.calqo  design-conference.calqo  editorial-carousel.calqo  embassy-statement.calqo  event-poster.calqo  fitness-schedule.calqo  hiring-post.calqo  ig-announcement.calqo  index.json  linkedin-tips.calqo  livestream-thumbnail.calqo  multilingual-card.calqo  music-release.calqo  national-day-invitation.calqo  newsletter-header.calqo  pinterest-recipe.calqo  podcast-episode.calqo  press-release.calqo  product-sale.calqo  reaction-card.calqo  reading-list.calqo  real-estate-listing.calqo  retro-postcard.calqo  save-the-date.calqo  skincare-routine.calqo  sticker-sheet.calqo  story-cover.calqo  travel-story.calqo  webinar-invite.calqo  (+4 more)
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/mcp/: bridge.rs  contracts.rs  mod.rs  server.rs  setup.rs  tools.rs
src-tauri/src/video/: avfoundation.rs  mod.rs  session.rs
src/app/: App.tsx  ErrorBoundary.tsx  PwaInstallPrompt.tsx  PwaUpdatePrompt.tsx  keyboardGuards.ts
src/app/commands/: appCommands.ts  nativeFileDrops.ts  nativeMenu.ts
src/app/mobile/: MobileCropOverlay.tsx  MobileEditor.tsx  MobileProjectBrowser.tsx  MobileShell.tsx  MobileStage.tsx  MobileTopBar.tsx
src/app/shell/: AgentDrawingPane.tsx  AppSettingsModal.tsx  AppShell.tsx  AppToast.tsx  ArtboardDots.tsx  ArtboardOverview.tsx  AssetHealthToast.tsx  BrandSettingsPane.tsx  ConfirmHost.tsx  EmojiPickerDialog.tsx  ExportDialog.tsx  ImportRecoveryModal.tsx  Inspector.tsx  LeftPanel.tsx  NewProjectModal.tsx  OptimizeAssetsModal.tsx  ProjectManagerModal.tsx  ProjectThumbnail.tsx  PromptTemplateDialog.tsx  RepairAssetsModal.tsx  ShortcutHelpModal.tsx  StatusBar.tsx  SvgLibraryDialog.tsx  TabBar.tsx  TitleBar.tsx  ToolRail.tsx  TranslateDialog.tsx  Workspace.tsx  (+3 more)
src/lib/: appInfo.ts
src/styles/: glass.css  globals.css  tokens.css
src/tests/: pwaRegisterStub.ts  setup.ts
src/types/: gifenc.d.ts
(+266 files in other folders)
