[package]
name = "calqo"
version = "0.1.5"
description = "A simple, glass-native social visual maker"
authors = ["Calqo contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "calqo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2"
